--- a/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
+++ b/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
@@ -68,7 +68,8 @@ DocumentModel:
             read: false
             write: false
         institutions:
-          type: keyword
+          type: taxonomy
+          vocabulary-type: institutions
           marshmallow:
             read: false
             write: false
@@ -82,6 +83,11 @@ DocumentModel:
           marshmallow:
             read: false
             write: false
+      marshmallow:
+        class: nr_metadata.documents.services.records.schema.NRDocumentSyntheticFieldsSchema
+      ui:
+        marshmallow:
+          class: nr_metadata.documents.services.records.ui_schema.NRDocumentSyntheticFieldsUISchema
 
     metadata:
       use: ['nr-documents#DocumentMetadata']
