fix missing marshmallow part

--- a/models/nr_documents_2.0.yaml
+++ b/models/nr_documents_2.0.yaml
@@ -70,6 +70,7 @@ DocumentModel:
         institutions:
           type: taxonomy
           vocabulary-type: institutions
+          marshmallow:
             read: false
             write: false
         keywords_cs:
