--- a/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
+++ b/packages/oarepo-model-builder-nr/oarepo_model_builder_nr/models/nr_documents_2.0.yaml
@@ -14,6 +14,9 @@ NRDocumentMetadata:
       class: nr_metadata.documents.services.records.ui_schema.NRDocumentMetadataUISchema
 
   properties:
+    languages[]:
+      ^minItems: 1
+      ^required: true
     thesis:
       ui:
         detail: thesis
