--- a/models/nr_documents_2.0.yaml
+++ b/models/nr_documents_2.0.yaml
@@ -48,7 +48,8 @@ NRDocumentMetadata:
           type: keyword
           ^label.cs: Oblasti studia
           ^label.en: Study fields
-    collection:
+    collection[]:
+      #^uniqueItems: true
       type: keyword
       label.cs: Kolekce
       label.en: Collection
